# team_heist_tactics

./: .dockerignore  .gitattributes  .gitignore  Cargo.toml  Dockerfile  IDEAS.md  README.md  build.rs  prod_run.sh  run.sh  style.sh  tht.proto
.github/: dependabot.yml  filters.yaml  filters.yml
.github/workflows/: README.md  all_actions.yml  backend_actions.yml  backend_style.yml  backend_test.yml  build.yml  cargo_test.yml  frontend_actions.yml  frontend_style.yml  frontend_test.yml
data/: handles.txt
data/krita/: 001a.kra  002.kra  003.kra  004.kra  005.kra  006.kra  README.md  grid_base.kra  symbol_assets.kra  symbol_assets_2.kra
data/tiles/: 1a.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json
other/: pre-commit
src/: endpoints.rs  errors.rs  game.rs  game_state.rs  lib.rs  load_json.rs  load_map.rs  main.rs  manager.rs  periodic.rs  serializer.rs  types.proto  types.rs  utils.rs  web.rs
templates/: index.html  index.html.j2  play.html  play.html.j2  play.old.html
tests/: game_tests.rs  types_tests.rs
ui/: .gitignore  README.md  generate_types.sh  index.html  package-lock.json  package.json  tsconfig.json  webpack.common.js  webpack.dev.js  webpack.prod.js
ui/src/: index.tsx
ui/src/candles/: CandlePage.tsx  CandlesPage.tsx  api.ts  slice.ts  types.d.ts
ui/src/common/: reducers.ts  routes.ts  store.ts
ui/src/common/hooks/: useMarked.tsx
ui/src/components/: App.tsx  DefaultPage.tsx  Footer.tsx  Sidebar.tsx  main.css  styles.ts
ui/src/constants/: colors.ts  other.ts
ui/src/join_game/: ChatBoxComponent.tsx  ConnectionStatusComponent.tsx  GameComponent.tsx  GameWindowComponent.tsx  InvalidMessagesComponent.tsx  JoinGameForm.tsx  JoinGamePage.tsx  LobbyForm.tsx  MainPage.tsx  MessagesComponent.tsx  MoveHeisterComponent.tsx  TimerComponent.tsx  api.ts  helpers.spec.ts  helpers.ts  overlay_components.tsx  slice.ts  types.d.ts
ui/templates/: index.html
