[package]
name = "team_heist_tactics"
version = "0.1.0"
authors = ["Daniel Porteous <danielporteous1@gmail.com>", "Kelly McBride <kemcbride28@gmail.com>", "Fatema Boxwala <fatemabox@gmail.com>"]
edition = "2018"
# Only rebuild if related files change.
include = ["src/**/*", "/build.rs", "Cargo.toml", "Cargo.lock"]
readme = "README.md"
repository = "https://github.com/banool/team_heist_tactics"
publish = false

[dependencies]
actix = "*"
actix-files = "*"
actix-rt = "*"
actix-web = "*"
actix-web-actors = "*"
anyhow = "*"
base64 = "*"
env_logger = "*"
lazy_static = "*"
log = "*"
prost = { git = "https://github.com/fdeantoni/prost", branch = "meta" }
prost-types = "0.6"
rand = "*"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

[build-dependencies]
prost-build = { git = "https://github.com/fdeantoni/prost", branch = "meta" }

